--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,76 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Coworkers - Erreur 500</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+    .page_404 {
+      padding: 40px 0;
+      background: #fff;
+      font-family: 'Arvo', serif;
+    }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    .page_404 img {
+      width: 100%;
+    }
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .four_zero_four_bg {
+      background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+      height: 400px;
+      background-position: center;
+    }
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+    .four_zero_four_bg h1 {
+      font-size: 80px;
+    }
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+    .four_zero_four_bg h3 {
+      font-size: 80px;
+    }
+
+    .link_404 {
+      color: #fff!important;
+      padding: 10px 20px;
+      background: #ff6600; /* Couleur orange (#ff6600) */
+      margin: 20px 0;
+      display: inline-block;
+      text-decoration: none; /* Supprime le soulignement du lien */
+    }
+
+    .link_404:hover {
+      background: #e65100; /* Couleur orange plus foncé (#e65100) au survol */
+    }
+
+    .contant_box_404 {
+      margin-top: -50px;
+    }
   </style>
 </head>
 
 <body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+  <section class="page_404">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="col-sm-10 col-sm-offset-1 text-center">
+            <div class="four_zero_four_bg">
+              <h1 class="text-center">500</h1>
+            </div>
+
+            <div class="contant_box_404">
+              <h3 class="h2">
+                Qui a coupé la connexion ?
+              </h3>
+
+              <p>La page que vous cherchez semble introuvable, encore la faute du stagiaire !</p>
+
+              <a href="https://www.coworkers-app.com" class="link_404">Accueil</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
+  </section>
 </body>
 </html>
